# notion2md-server

./: Cargo.toml  Dockerfile  docker-bake.hcl  fnox.toml
.github/workflows/: docker-deploy.yml
crates/notion-opendal/: Cargo.toml
crates/notion-opendal/src/: lib.rs  notion.rs  notion_opendal.rs
deploy/k8s/: deployment.yaml  gateway.yaml  ingress.yaml
docs/api/: get_page_json.md  get_page_markdown.md  list_pages.md
examples/: opendal_notion.rs
src/: main.rs
