[package]
name = "notion2md-server"
version = "0.1.0"
edition = "2024"

[dependencies]
notion-client = "1.0.11"
notion2md = "0.1.0-alpha.3"
logforth = { version = "0.29.1", features = ["append-opentelemetry", "rustls", "layout-json", "starter-log"] }
log = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
