[workspace]
resolver = "2"
members = ["crates/notion-opendal", "."]

[workspace.dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
logforth = { version = "0.29.1", features = ["append-opentelemetry", "rustls", "layout-json", "starter-log"] }
notion-client = "1.0.11"
notion2md = "0.1.0-alpha.3"
opendal = { version = "0.54.1", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[package]
name = "notion2md-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
notion-client = { workspace = true }
notion2md = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
notion-opendal = { path = "crates/notion-opendal" }
opendal = { workspace = true }
futures = { workspace = true }
